--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="./1-timer.html">Timer</a></li>
-      <li><a href="./2-snackbar.html">Snackbar</a></li>
+      <li><a href="./searching.html">Timer</a></li>
     </ul>
   </body>
 </html>
