--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
     <link
       href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
   </head>
   <body>
     <ul>
-      <li><a href="./searching.html">Timer</a></li>
+      <li><a href="./searching.html">Searching</a></li>
     </ul>
   </body>
 </html>
