--- a/src/searching.html
+++ b/src/searching.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countdown Timer</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
-    />
+    <title>SearchingImg</title>
+
     <link rel="stylesheet" href="./css/searching.css" />
   </head>
   <body>
