--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
       <button type="submit">Search</button>
     </form>
 
-    <div id="messageContainer" class="message-container"></div>
-    <div id="loader" class="loader"></div>
+    <!-- <div id="messageContainer" class="message-container"></div> -->
+    <div id="loader" class="loader hide"></div>
 
-    <div id="gallery" class="gallery"></div>
+    <ul id="gallery" class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
     <script
