--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
       <button type="submit">Search</button>
     </form>
 
-    <!-- <div id="messageContainer" class="message-container"></div> -->
-    <div id="loader" class="loader hide"></div>
+    <div class="loader hide"></div>
 
     <ul id="gallery" class="gallery"></ul>
 
